--- a/project.cabal
+++ b/project.cabal
@@ -39,12 +39,11 @@ library
 
 executable ttofu
   main-is:          Main.hs
-  hs-source-dirs:   bin
+  hs-source-dirs:   src
   default-language: Haskell2010
   ghc-options:      -Wall
 
   build-depends:
-    ttofu,
     base >= 4 && < 6
 
 test-suite tests
