--- a/project.cabal
+++ b/project.cabal
@@ -35,15 +35,17 @@ library
     base >= 4 && < 6
 
   exposed-modules:
-    Main
+    Split,
+    DataStructures
 
 executable ttofu
   main-is:          Main.hs
-  hs-source-dirs:   src
+  hs-source-dirs:   bin
   default-language: Haskell2010
   ghc-options:      -Wall
 
   build-depends:
+    ttofu,
     base >= 4 && < 6
 
 test-suite tests
@@ -59,7 +61,7 @@ test-suite tests
     -fno-warn-unused-binds
 
   build-depends:
-    PNAME,
+    ttofu,
     base                       >= 4 && < 6,
     test-framework             == 0.6.1,
     test-framework-quickcheck2 == 0.2.12.3,
